# roi_image_c-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  convexhull.cpp  extract_roi.cpp  main  main.cpp  main2.cpp  roi.json  test.cpp
